@@ -1,3 +1,9 @@
+Sun Jun 27 10:41:38 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/rubygems/require_paths_builder.rb (write_require_paths_file_if_needed):
+	  no reason that bin directory should be included in $LOAD_PATH.
+	  it is for executable files, but not libraries.  [ruby-core:25936]
+
 Sat Jun 26 11:56:31 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* common.mk (clear-installed-list): put redirection before set
